<resources>
    <string name="app_name">Auxillium</string>
    <string name="action_settings">Settings</string>
    <string name="editText">Technovation 2020!</string>
    <string name="SophiesButton">Sophies button</string>
    <string name="AnirrasButton">Anirras Button</string>
    <string name="profileButton">Profile</string>
    <string name="infoButton">Info</string>
    <string name="settingsButton">Settings</string>
    <string name="Register">Register</string>
    <string name="infoPage">this is info page</string>
    <string name="levelNumberHome">Level 1: Shooting</string>
    <string name="categoryHome">Public Disasters</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="signUp">Sign Up</string>
    <string name="buttonEarthquake">Earthquake</string>
    <string name="ReTakeQuiz">Retake Quiz</string>
    <string name="Blank">Blank</string>
    <string name="articlesTitle">Informational Articles</string>
    <string name="article1">Harmful Psychological Effects of Racial Stereotyping</string>
    <string name="article2">LGBTQ Definitions Every Good Ally Should Know</string>
    <string name="article3">Interacting with People with Disabilities</string>
    <string name="article4">The Dos and Don\'ts of Cultural Appropriation</string>
    <string name="CPRtext">CPR</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_game">Open Game</string>
    <string name="title">Title</string>
    <string name="NextButton">NEXT</string>
    <string name="TakeQuiz">TAKE QUIZ</string>
    <string name="PurchaseButton">Purchase</string>
    <string name="character1Cost">100 coins</string>
    <string name="character2Cost">200 coins</string>
    <string name="character3Cost">300 coins</string>
    <string name="character4Cost">400 coins</string>
    <string name="character5Cost">500 coins</string>
    <string name="characterPurchased">This character has been purchased!</string>
    <string name="shopTitle">Character Shop</string>
    <string name="openRequestForm">Submit an article request</string>
    <string name="gmailApp">Select Gmail App</string>
    <string name="SimranTitle">Simran Jeet Singh</string>
    <string name="SimranBio"> An activist who advocates for religious equality in America
        Gender: Male
        Pronouns: He/Him
        Age: 36
        Race: American</string>
    <string name="SimranInfo1">Simran Jeet Singh was born on July 25, 1984, in San Antonio, Texas. Growing up, there were not a lot of Sikh families where he lived and his parents felt it was important to stay connected to their culture. Singh started learning Punjabi from a young age and also consistently did kirtan and ardas (religious practices) , as there were no Gurdwaras (Sikh places of worship) where he lived. His community was small and they met on Friday nights but Singh also had friends who weren’t Sikh. He felt like he was living in two different worlds.

        Singh went to camps around America during the years that were connected with Sikhi but he didn’t feel truly (tied) until he started learning about the recent history of his people. He learned he was named by his parents after a famous political activist at the time. From these places came his inspiration to help his community. From his emotional connections came his spiritual connections to the world.
    </string>
    <string name="SimranInfo2"> After 9/11, Singh realized that identity includes how other people view you as well as how you view yourself. He saw himself being grouped into places while his community was turning invisible, trying to explain their story. 9/11 showed him the pain and ignorance people show towards certain religions and faiths. He felt he had the responsibility and privilege, that others didn’t have, to change that.

    Today, Simran Jeet Singh is a writer, a professor at Columbia University, and a Senior Religion Fellow for the Sikh Coalition, and a Truman National Security Fellow for the Truman National Security Project. He has multiple degrees from Harvard and Columbia University and has a podcast called Spirited where he talks about leaders and activists. He has also written a book called Fauja Singh Keeps Going about the oldest person who was believed to run a marathon. He lives with his two children and his wife.
    </string>
    <string name="SimranReferences">http://www.wearesikhs.org/simran_jeet_singh
    https://theconversation.com/profiles/simran-jeet-singh-486698#:~:text=Born%20and%20raised%20in%20San,at%20Weill%20Cornell%20Medical%20College.</string>
    <string name="Q1Simran">1. Where was Singh born where there were not many Sikh families at the time?</string>
    <string name="Q1_A1Simran">Antipolo, Philippines</string>
    <string name="Q1_A2Simran">Sacramento, California</string>
    <string name="Q1_A3Simran">Mingora, Swat valley, Pakistan</string>
    <string name="Q1_A4Simran">San Antonio, Texas</string>
    <string name="Q2Simran">2. When did Simran Jeet Singh begin feeling truly tied to the culture of his people?</string>
    <string name="Q2_A1Simran">When he started going to Gurdwaras at a young age</string>
    <string name="Q2_A2Simran">When he began learning about the recent history of his people</string>
    <string name="Q2_A3Simran">When 9/11 occurred</string>
    <string name="Q2_A4Simran">When he performed religious practices with his family</string>
    <string name="Q3Simran">3. Who was Simran Jeet Singh named after?</string>
    <string name="Q3_A1Simran">A famous singer at the time</string>
    <string name="Q3_A2Simran">A famous drum player at the time</string>
    <string name="Q3_A3Simran">A famous political activist at the time</string>
    <string name="Q3_A4Simran"> A famous painter at the time</string>
    <string name="Q4Simran">4. What did Singh see after 9/11?</string>
    <string name="Q4_A1Simran">He saw himself being grouped into places while his community was turning invisible</string>
    <string name="Q4_A2Simran">He saw himself being more ignorant towards people of other races</string>
    <string name="Q4_A3Simran">He saw large amounts of others grouping themselves into certain religious categories</string>
    <string name="Q4_A4Simran">He saw that all races and religions were treated equally</string>
    <string name="Q5Simran">5. What is Simran Jeet Singh’s podcast “Spirited” about?</string>
    <string name="Q5_A1Simran">His favorite books about painting</string>
    <string name="Q5_A2Simran">Leaders and activists</string>
    <string name="Q5_A3Simran">Political parties in America</string>
    <string name="Q5_A4Simran">His favorite foods</string>
    <string name="AliceTitle">Alice Wong</string>
    <string name="AliceBio"> Pronouns: She/Her Gender: Female Age: 46 Activist for the rights of disabled people </string>
    <string name="AliceInfo1">Alice Wong was born in Indianapolis, Indiana on March 24, 1974, with Spinal Muscular Atrophy (SMA). As a young girl, she always felt lonely being a wheel-chair user. It was a three-hour drive from her home to buy lunch and groceries as Chinese-Americans living in Indiana. She found the distance made her appreciate the food more. She also experienced bullying at schools. Her classmates would push her and hit her because she was weak and her teachers did not make enough accommodations for people with disabilities.
        Wong became a sociologist and learned about different groups and what they meant. From there, she started thinking about disabilities as less of just a biological difference but also how it affected people mentally. She found she had a lot of anger due to her disability which she started channeling into writing and research. She experienced microaggressions from others towards people with disabilities such as when she was denied a drama course because she would not be able to be “physical enough”.
    </string>
    <string name="SuicideCrisis">Suicide And Crisis</string>
    <string name="LYouth">LGBTQ+ Youth</string>
    <string name="DisorderAlliances">Alliances for Disorders</string>
    <string name="call">Call:</string>
    <string name="next">Next</string>
    <string name="ASFP"><a href="https://afsp.org/">The American Foundation for Suicide Prevention</a></string>
    <string name="ASFPd">Provides referrals to support groups and mental health professionals, resources on loss, and suicide prevention information </string>
    <string name="ASFPc">888-333-2377</string>
    <string name="NDVH"><a href="https://www.thehotline.org/">The National Domestic Violence Hotline</a></string>
    <string name="NDVHd">Provides 24/7 crisis intervention, safety planning and information on domestic violence</string>
    <string name="NDVHc">800-799-7233</string>
    <string name="SPL"><a href="https://suicidepreventionlifeline.org/">The Suicide Prevention Lifeline</a></string>
    <string name="SPLd">Connects callers to trained crisis counselors</string>
    <string name="SPLc">800-273-8255</string>
    <string name="TTP"><a href="https://www.thetrevorproject.org/">The Trevor Project</a></string>
    <string name="TTPd">The Trevor Project is the leading national organization providing crisis intervention and suicide prevention services to lesbian, gay, bisexual, transgender and questioning (LGBTQ) young people.</string>
    <string name="TTPc">866-488-7386</string>
    <string name="SCO"><a href="https://sco.org/#family-therapy-intervention-pilot-for-lgbtq-youth">SCO Family Therapy Intervention Program</a></string>
    <string name="SCOd">Provides free, short-term family counseling services to support parents and young people in working through challenges that might arise related to coming out.</string>
    <string name="SCOc">516-671-1253</string>
    <string name="TPP"><a href="https://www.mykidisgay.com/">The Parents Project</a></string>
    <string name="TPPd">The Parents Project is a first-of-its-kind digital presence, inclusive of videos, advice, and resources, dedicated exclusively toward helping parents understand their LGBTQ kids.</string>
    <string name="LGBTQmoreinfo"><a href="https://gaycenter.org/resources/#youth">https://gaycenter.org/resources/#youth</a></string>
    <string name="formore">For more information, visit:</string>
    <string name="CHADD"><a href="https://chadd.org/">Children and Adults with Attention-Deficit/Hyperactivity Disorder(CHADD)</a></string>
    <string name="CHADDd">Provides information and referrals on ADHD, including local support groups </string>
    <string name="CHADDc">800-233-4050</string>
    <string name="DBSA"><a href="https://www.dbsalliance.org/">Depression and Bipolar Support Alliance (DBSA)</a></string>
    <string name="DBSAd">Provides information on bipolar disorder and depression, offers in-person and online support groups and forums</string>
    <string name="DBSAc">800-826-3632</string>
    <string name="IOF"><a href="https://iocdf.org/">International OCD Foundation</a></string>
    <string name="IOFd">Provides information on OCD and treatment referrals</string>
    <string name="IOFc">617-973-5801</string>
    <string name="NCEED"><a href="https://www.nceedus.org/">National Center of Excellence for Eating Disorders (NCEED)</a></string>
    <string name="NCEEDd">Provides up-to-date, reliable and evidence-based information about eating disorders</string>
    <string name="NCEEDc">800-931-2237</string>
</resources>